--- a/04 ■► React/final-app/src/pages/SignInOrUp/index.module.scss
+++ b/04 ■► React/final-app/src/pages/SignInOrUp/index.module.scss
@@ -141,6 +141,30 @@
             position: absolute;
         }
     }
+    // &signinorup__login {}
+    // &signinorup__login_overlay {}
+    // &signinorup__login_header {}
+    // &signinorup__login_contents {}
+    // &signinorup__login_contents__label {}
+    // &signinorup__login_contents__input {}
+    // &signinorup__login_contents__eyebutton {}
+    // .fa-eye {}
+    // &signinorup__login_submit {}
+    // &signinorup__register {}
+    // &signinorup__register_overlay {}
+    // &signinorup__register_header {}
+    // &signinorup__register_contents {}
+    // &signinorup__register_contents__label {}
+    // &signinorup__register_contents__input {}
+    // &genders_radio {}
+    // &genders_label {}
+    // &dateofbirth__label {}
+    // &dateofbirth__input {}
+    // &dateofbirth__input_options {}
+    // &signinorup__register_accept {}
+    // &signinorup__register_accept__checkbox {}
+    // &signinorup__register_submit {}
+    // i {}
     &__register {
         z-index: 2;
         position: absolute;
