May 12, 2023 at 18:48 | React project ShopNet day 24

--- a/04 ■► React/final-app/src/components/Pop-ups/index.module.scss
+++ b/04 ■► React/final-app/src/components/Pop-ups/index.module.scss
@@ -16,5 +16,30 @@
 //                              var(--filter-shadow-color)
 //                              var(--borders-color)
 // ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
+.successfullysigned {}
+&successfullysigned__overlay {}
+&successfullysigned__icon {}
+.fa-check {}
+&successfullysigned__text {}
 
+.failedmessage {}
+&failedmessage__overlay {}
+&failedmessage__icon {}
+.fa-xmark {}
+&failedmessage__text {}
+
+.loading {}
+&loading__overlay {}
+&loading__animation {}
+&loading__animation_blocks {}
+
+.privacypolicies {}
+&__overlay {}
+&privacypolicies__title {}
+&privacypolicies__headers {}
+
+.termsandconditions {}
+&__overlay {}
+&termsandconditions__title {}
+&termsandconditions__headers {}
 // ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
