--- a/04 ■► React/final-app/src/components/Pop-ups/index.module.css
+++ b/04 ■► React/final-app/src/components/Pop-ups/index.module.css
@@ -1,1 +1,240 @@
-/*# sourceMappingURL=index.module.css.map */
+.successfullysigned {
+  width: 500px;
+  height: 300px;
+  border: 1px solid var(--borders-color);
+  border-radius: 8px;
+  overflow: hidden;
+  background-color: var(--default-bg-color);
+  z-index: 99;
+  padding: 10px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: var(--quick-fx);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.successfullysigned__icon {
+  width: 150px;
+  height: 150px;
+  border: 10px solid rgb(0, 200, 0);
+  color: rgb(0, 200, 0);
+  font-size: 100px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: var(--quick-fx);
+  animation: spin-circle 1s ease-in-out 500ms 1;
+}
+@keyframes spin-circle {
+  0% {
+    transform: rotateY(0deg);
+  }
+  50% {
+    transform: rotateY(180deg);
+  }
+  100% {
+    transform: rotateY(360deg);
+  }
+}
+.successfullysigned__text {
+  margin-top: 15px;
+  font-size: 20px;
+  font-weight: 600;
+  color: var(--text-color);
+}
+
+.successfullysigned__overlay {
+  width: 100%;
+  height: 100%;
+  z-index: 95;
+  position: fixed;
+  top: 0;
+  left: 0;
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  background-color: rgba(15, 195, 15, 0.3);
+}
+
+.failedmessage {
+  width: 500px;
+  height: 300px;
+  border: 1px solid var(--borders-color);
+  border-radius: 8px;
+  overflow: hidden;
+  background-color: var(--default-bg-color);
+  z-index: 99;
+  padding: 10px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: var(--quick-fx);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.failedmessage__icon {
+  width: 150px;
+  height: 150px;
+  border: 10px solid rgb(200, 0, 0);
+  color: rgb(200, 0, 0);
+  font-size: 100px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: var(--quick-fx);
+  animation: stretch-circle 0.75s ease-in-out 500ms 1;
+}
+@keyframes stretch-circle {
+  0% {
+    transform: scaleX(1);
+  }
+  50% {
+    transform: scaleX(1.5);
+  }
+  100% {
+    transform: scaleX(1);
+  }
+}
+.failedmessage__text {
+  margin-top: 15px;
+  font-size: 20px;
+  font-weight: 600;
+  color: var(--text-color);
+}
+
+.failedmessage__overlay {
+  width: 100%;
+  height: 100%;
+  z-index: 95;
+  position: fixed;
+  top: 0;
+  left: 0;
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  background-color: rgba(195, 15, 15, 0.3);
+}
+
+.loading {
+  z-index: 99;
+  border: none;
+  border: 1px solid none;
+  background-color: transparent;
+  width: 300px;
+  height: 300px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.loading__animation {
+  width: 100%;
+  height: 100%;
+  border: none;
+  background-color: transparent;
+  display: flex;
+  scale: 1.5;
+  animation: loading-circle 4s linear 0ms infinite;
+}
+.loading__animation_blocks {
+  width: 20px;
+  height: 50px;
+  border: 1px solid var(--borders-color);
+  background-color: var(--buttons-active-color);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 4px;
+}
+.loading__animation_blocks:nth-of-type(1) {
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.loading__animation_blocks:nth-of-type(2) {
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.loading__animation_blocks:nth-of-type(3) {
+  top: 50%;
+  left: 30%;
+  transform: translate(-50%, -50%) rotateZ(90deg);
+}
+.loading__animation_blocks:nth-of-type(4) {
+  top: 50%;
+  left: 70%;
+  transform: translate(-50%, -50%) rotateZ(90deg);
+}
+.loading__animation_blocks:nth-of-type(5) {
+  top: 35.5%;
+  left: 35.5%;
+  transform: translate(-50%, -50%) rotateZ(135deg);
+}
+.loading__animation_blocks:nth-of-type(6) {
+  top: 64.5%;
+  left: 64.5%;
+  transform: translate(-50%, -50%) rotateZ(135deg);
+}
+.loading__animation_blocks:nth-of-type(7) {
+  top: 64.5%;
+  left: 35.5%;
+  transform: translate(-50%, -50%) rotateZ(45deg);
+}
+.loading__animation_blocks:nth-of-type(8) {
+  top: 35.5%;
+  left: 64.5%;
+  transform: translate(-50%, -50%) rotateZ(45deg);
+}
+@keyframes loading-circle {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  100% {
+    transform: rotateZ(360deg);
+  }
+}
+
+.loading__overlay {
+  width: 100%;
+  height: 100%;
+  z-index: 95;
+  position: fixed;
+  top: 0;
+  left: 0;
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.privacypolicies__overlay {
+  width: 100%;
+  height: 100%;
+  z-index: 95;
+  position: fixed;
+  top: 0;
+  left: 0;
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.termsandconditions__overlay {
+  width: 100%;
+  height: 100%;
+  z-index: 95;
+  position: fixed;
+  top: 0;
+  left: 0;
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  background-color: rgba(255, 255, 255, 0.1);
+}/*# sourceMappingURL=index.module.css.map */
