--- a/04 ■► React/final-app/src/components/Pop-ups/index.module.css
+++ b/04 ■► React/final-app/src/components/Pop-ups/index.module.css
@@ -129,7 +129,7 @@
   background-color: transparent;
   width: 300px;
   height: 300px;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -215,6 +215,38 @@
   background-color: rgba(255, 255, 255, 0.1);
 }
 
+.privacypolicies {
+  z-index: 96;
+  overflow-y: scroll;
+  background-color: var(--default-bg-color);
+  width: 400px;
+  height: 500px;
+  border: 1px solid var(--borders-color);
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 10px;
+  font-size: 16px;
+  color: var(--text-color);
+}
+.privacypolicies__title {
+  width: 100%;
+  font-size: 20px;
+  font-weight: 900;
+  background-color: var(--link-active-color);
+  padding: 6px;
+  text-align: center;
+  margin-bottom: 10px;
+}
+.privacypolicies__headers {
+  width: 100%;
+  font-size: 18px;
+  font-weight: 600;
+  margin-top: 15px;
+  margin-bottom: 5px;
+}
+
 .privacypolicies__overlay {
   width: 100%;
   height: 100%;
@@ -225,6 +257,38 @@
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
   background-color: rgba(255, 255, 255, 0.1);
+}
+
+.termsandconditions {
+  z-index: 96;
+  overflow-y: scroll;
+  background-color: var(--default-bg-color);
+  width: 400px;
+  height: 500px;
+  border: 1px solid var(--borders-color);
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 10px;
+  font-size: 16px;
+  color: var(--text-color);
+}
+.termsandconditions__title {
+  width: 100%;
+  font-size: 20px;
+  font-weight: 900;
+  background-color: var(--link-active-color);
+  padding: 6px;
+  text-align: center;
+  margin-bottom: 10px;
+}
+.termsandconditions__headers {
+  width: 100%;
+  font-size: 18px;
+  font-weight: 600;
+  margin-top: 15px;
+  margin-bottom: 5px;
 }
 
 .termsandconditions__overlay {
