--- a/04 ■► React/final-app/src/components/Pop-ups/index.module.scss
+++ b/04 ■► React/final-app/src/components/Pop-ups/index.module.scss
@@ -134,7 +134,7 @@
     background-color: transparent;
     width: 300px;
     height: 300px;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -220,8 +220,35 @@
 }
 // --- privacy window ---
 .privacypolicies {
-    &__title {}
-    &__headers {}
+    z-index: 96;
+    overflow-y: scroll;
+    background-color: var(--default-bg-color);
+    width: 400px;
+    height: 500px;
+    border: 1px solid var(--borders-color);
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+    font-size: 16px;
+    color: var(--text-color);
+    &__title {
+        width: 100%;
+        font-size: 20px;
+        font-weight: 900;
+        background-color: var(--link-active-color);
+        padding: 6px;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+    &__headers {
+        width: 100%;
+        font-size: 18px;
+        font-weight: 600;
+        margin-top: 15px;
+        margin-bottom: 5px;
+    }
 }
 .privacypolicies__overlay {
     width: 100%;
@@ -235,8 +262,35 @@
 }
 // --- terms window ---
 .termsandconditions {
-    &__title {}
-    &__headers {}
+    z-index: 96;
+    overflow-y: scroll;
+    background-color: var(--default-bg-color);
+    width: 400px;
+    height: 500px;
+    border: 1px solid var(--borders-color);
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+    font-size: 16px;
+    color: var(--text-color);
+    &__title {
+        width: 100%;
+        font-size: 20px;
+        font-weight: 900;
+        background-color: var(--link-active-color);
+        padding: 6px;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+    &__headers {
+        width: 100%;
+        font-size: 18px;
+        font-weight: 600;
+        margin-top: 15px;
+        margin-bottom: 5px;
+    }
 }
 .termsandconditions__overlay {
     width: 100%;
