--- a/04 ■► React/final-app/src/pages/SignInOrUp/index.module.css
+++ b/04 ■► React/final-app/src/pages/SignInOrUp/index.module.css
@@ -98,7 +98,7 @@
   z-index: 2;
   position: absolute;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   flex-direction: column;
   gap: 5px;
@@ -126,11 +126,73 @@
   height: 100%;
   position: absolute;
 }
+.signinorup__login_header {
+  font-size: 30px;
+  font-weight: 900;
+  filter: drop-shadow(0 0 1px var(--filter-shadow-color));
+  color: var(--default-bg-color);
+  margin: 100px 0px 80px 0px;
+}
+.signinorup__login_contents {
+  border: none;
+  padding-left: 20px;
+}
+.signinorup__login_contents__label {
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 5px;
+}
+.signinorup__login_contents__input {
+  width: 240px;
+  height: 30px;
+  padding-left: 10px;
+  outline: none;
+  border: 1px solid var(--borders-color);
+  color: var(--text-color);
+  border-radius: 4px;
+  position: relative;
+  margin-top: 5px;
+  background-color: var(--default-bg-color);
+}
+.signinorup__login_contents__input:not(:last-of-type) {
+  margin-bottom: 20px;
+}
+.signinorup__login_contents__eyebutton {
+  position: relative;
+  top: 0;
+  left: -30px;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  border: none;
+  background-color: transparent;
+  color: var(--text-color);
+}
+.signinorup__login_submit {
+  border: 1px solid var(--borders-color);
+  background-color: var(--buttons-color);
+  width: 240px;
+  height: 30px;
+  font-weight: 600;
+  border-radius: 6px;
+  margin-top: 20px;
+  color: var(--text-color);
+  transition: var(--quick-fx);
+}
+.signinorup__login_submit:hover {
+  background-color: var(--buttons-hover-color);
+  filter: drop-shadow(0 0 5px var(--filter-shadow-color));
+}
+.signinorup__login_submit:active {
+  transition: var(--instant-fx);
+  background-color: var(--buttons-active-color);
+}
 .signinorup__register {
   z-index: 2;
   position: absolute;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   flex-direction: column;
   gap: 5px;
@@ -157,6 +219,97 @@
   width: 100%;
   height: 100%;
   position: absolute;
+}
+.signinorup__register_header {
+  font-size: 30px;
+  font-weight: 900;
+  filter: drop-shadow(0 0 1px var(--filter-shadow-color));
+  color: var(--default-bg-color);
+  margin: 10px 0px 10px 0px;
+}
+.signinorup__register_contents {
+  border: none;
+  padding-left: 20px;
+}
+.signinorup__register_contents__label {
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 5px;
+}
+.signinorup__register_contents__label .genders_radio {
+  accent-color: var(--link-hover-color);
+}
+.signinorup__register_contents__label .genders_label {
+  margin-bottom: 10px;
+}
+.signinorup__register_contents__input {
+  width: 240px;
+  height: 30px;
+  padding-left: 10px;
+  outline: none;
+  border: 1px solid var(--borders-color);
+  color: var(--text-color);
+  border-radius: 4px;
+  position: relative;
+  margin-top: 5px;
+  background-color: var(--default-bg-color);
+}
+.signinorup__register_contents__input:not(:last-of-type) {
+  margin-bottom: 20px;
+}
+.signinorup__register_contents__eyebutton {
+  position: relative;
+  top: 0;
+  left: -30px;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  border: none;
+  background-color: transparent;
+  color: var(--text-color);
+}
+.signinorup__register_contents .dateofbirth__label {
+  font-weight: 600;
+  margin: 10px 5px;
+  position: relative;
+}
+.signinorup__register_contents .dateofbirth__input {
+  background-color: var(--default-bg-color);
+  padding: 1px;
+  outline: none;
+}
+.signinorup__register_contents .dateofbirth__input_options {
+  background-color: var(--default-bg-color);
+}
+.signinorup__register_accept {
+  font-weight: 600;
+}
+.signinorup__register_accept__checkbox {
+  accent-color: var(--link-active-color);
+  margin: 10px 5px 10px 0px;
+}
+.signinorup__register_accept i {
+  font-style: normal;
+  font-weight: 600;
+}
+.signinorup__register_submit {
+  border: 1px solid var(--borders-color);
+  background-color: var(--buttons-color);
+  width: 400px;
+  height: 30px;
+  font-weight: 600;
+  border-radius: 6px;
+  color: var(--text-color);
+  transition: var(--quick-fx);
+}
+.signinorup__register_submit:hover {
+  background-color: var(--buttons-hover-color);
+  filter: drop-shadow(0 0 5px var(--filter-shadow-color));
+}
+.signinorup__register_submit:active {
+  transition: var(--instant-fx);
+  background-color: var(--buttons-active-color);
 }
 .signinorup__bottomside {
   width: 1000px;
@@ -187,7 +340,7 @@
   background-color: var(--buttons-hover-color);
 }
 .signinorup__bottomside_buttons:active {
-  transition: var(--instant-color);
+  transition: var(--instant-fx);
   filter: drop-shadow(0 0 10px var(--buttons-active-color));
   background-color: var(--buttons-active-color);
 }
