--- a/04 ■► React/final-app/src/pages/SignInOrUp/index.module.css
+++ b/04 ■► React/final-app/src/pages/SignInOrUp/index.module.css
@@ -119,8 +119,8 @@
 }
 .signinorup__login_overlay {
   z-index: -1;
-  -webkit-backdrop-filter: blur(2px);
-          backdrop-filter: blur(2px);
+  -webkit-backdrop-filter: blur(4px);
+          backdrop-filter: blur(4px);
   background-color: rgba(255, 255, 255, 0.1);
   width: 100%;
   height: 100%;
@@ -213,8 +213,8 @@
 }
 .signinorup__register_overlay {
   z-index: 1;
-  -webkit-backdrop-filter: blur(2px);
-          backdrop-filter: blur(2px);
+  -webkit-backdrop-filter: blur(4px);
+          backdrop-filter: blur(4px);
   background-color: rgba(255, 255, 255, 0.1);
   width: 100%;
   height: 100%;
@@ -238,9 +238,10 @@
 }
 .signinorup__register_contents__label .genders_radio {
   accent-color: var(--link-hover-color);
+  margin: 5px 0px 10px 20px;
 }
 .signinorup__register_contents__label .genders_label {
-  margin-bottom: 10px;
+  margin: 0px 0px 0px 0px;
 }
 .signinorup__register_contents__input {
   width: 240px;
@@ -271,13 +272,13 @@
 }
 .signinorup__register_contents .dateofbirth__label {
   font-weight: 600;
-  margin: 10px 5px;
   position: relative;
 }
 .signinorup__register_contents .dateofbirth__input {
   background-color: var(--default-bg-color);
   padding: 1px;
   outline: none;
+  margin: 10px 5px;
 }
 .signinorup__register_contents .dateofbirth__input_options {
   background-color: var(--default-bg-color);
