--- a/04 ■► React/final-app/src/pages/SignInOrUp/index.module.scss
+++ b/04 ■► React/final-app/src/pages/SignInOrUp/index.module.scss
@@ -136,7 +136,7 @@
         color: var(--text-color);
         &_overlay {
             z-index: -1; // -1 1
-            backdrop-filter: blur(2px);
+            backdrop-filter: blur(4px);
             background-color: rgba(255,255,255,0.1);
             width: 100%;
             height: 100%;
@@ -228,7 +228,7 @@
         color: var(--text-color);
         &_overlay {
             z-index: 1; // 1 -1
-            backdrop-filter: blur(2px);
+            backdrop-filter: blur(4px);
             background-color: rgba(255,255,255,0.1);
             width: 100%;
             height: 100%;
@@ -250,9 +250,10 @@
                 margin-bottom: 5px;
                 .genders_radio {
                     accent-color: var(--link-hover-color);
+                    margin: 5px 0px 10px 20px; // top right bottom left
                 }
                 .genders_label {
-                    margin-bottom: 10px;
+                    margin: 0px 0px 0px 0px; // top right bottom left
                 }
             }
             &__input {
@@ -282,13 +283,14 @@
             }
             .dateofbirth__label {
                 font-weight: 600;
-                margin: 10px 5px; // top-bottom left-right
+                // margin: 10px 5px; // top-bottom left-right
                 position: relative;
             }
             .dateofbirth__input {
                 background-color: var(--default-bg-color);
                 padding: 1px;
                 outline: none;
+                margin: 10px 5px;// top-bottom left-right
                 &_options {
                     background-color: var(--default-bg-color);
                 }
