--- a/04 ■► React/final-app/src/pages/Settings/index.module.css
+++ b/04 ■► React/final-app/src/pages/Settings/index.module.css
@@ -1,1 +1,88 @@
-/*# sourceMappingURL=index.module.css.map */
+.settings {
+  display: flex;
+  width: 100%;
+  height: auto;
+  border: 1px solid var(--borders-color);
+  background-color: var(--default-bg-color);
+  justify-content: center;
+  align-items: flex-start;
+  transition: var(--quick-fx);
+  padding: 20px 0px 20px 0px;
+}
+.settings__menu {
+  width: 150px;
+  height: 500px;
+  border: 1px solid var(--borders-color);
+  display: flex;
+  flex-direction: column;
+  gap: 1px;
+  padding-top: 1px;
+}
+.settings__menu_buttons {
+  width: 100%;
+  height: 30px;
+  font-size: 18px;
+  font-weight: 600;
+  border: none;
+  border-top: 1px solid var(--borders-color);
+  border-bottom: 1px solid var(--borders-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  background-color: var(--buttons-color);
+  transition: var(--quick-fx);
+  color: var(--text-color);
+}
+.settings__menu_buttons:hover {
+  background-color: var(--buttons-hover-color);
+}
+.settings__menu_buttons:active {
+  background-color: var(--buttons-active-color);
+}
+.settings__container {
+  width: 1250px;
+  height: 500px;
+  border: 1px solid var(--borders-color);
+  padding: 20px 10px 20px 10px;
+  overflow-y: scroll;
+  color: var(--text-color);
+}
+.settings__container_section {
+  width: 100%;
+  height: auto;
+  flex-direction: column;
+  font-size: 16px;
+}
+.settings__container_section__title {
+  font-size: 40px;
+  font-weight: 900;
+  letter-spacing: 2px;
+  margin-bottom: 60px;
+}
+.settings__container_section__headers {
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 5px;
+}
+.settings__container_section__headers:not(:first-of-type) {
+  margin-top: 30px;
+}
+.settings__container #setting_section_1 {
+  display: flex;
+}
+.settings__container #setting_section_2 {
+  display: none;
+}
+.settings__container #setting_section_3 {
+  display: none;
+}
+.settings__container #setting_section_4 {
+  display: none;
+}
+.settings__container #setting_section_5 {
+  display: none;
+}
+.settings__container #setting_section_6 {
+  display: none;
+}/*# sourceMappingURL=index.module.css.map */
