--- a/04 ■► React/final-app/src/pages/Settings/index.module.scss
+++ b/04 ■► React/final-app/src/pages/Settings/index.module.scss
@@ -17,11 +17,91 @@
 //                              var(--borders-color)
 // ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
 .settings {
+    display: flex;
+    width: 100%;
+    height: auto;
+    border: 1px solid var(--borders-color);
+    background-color: var(--default-bg-color);
+    justify-content: center;
+    align-items: flex-start;
+    transition: var(--quick-fx);
+    padding: 20px 0px 20px 0px; // top right bottom left
     &__menu {
-        &_buttons {}
+        width: 150px;
+        height: 500px;
+        border: 1px solid var(--borders-color);
+        display: flex;
+        flex-direction: column;
+        gap: 1px;
+        padding-top: 1px;
+        &_buttons {
+            width: 100%;
+            height: 30px;
+            font-size: 18px;
+            font-weight: 600;
+            border: none;
+            border-top: 1px solid var(--borders-color);
+            border-bottom: 1px solid var(--borders-color);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+            background-color: var(--buttons-color);
+            transition: var(--quick-fx);
+            color: var(--text-color);
+            &:hover {
+                background-color: var(--buttons-hover-color);
+            }
+            &:active {
+                background-color: var(--buttons-active-color);
+            }
+        }
     }
     &__container {
-        &_section {}
+        width: 1250px;
+        height: 500px;
+        border: 1px solid var(--borders-color);
+        padding: 20px 10px 20px 10px; // top right bottom left
+        overflow-y: scroll;
+        color: var(--text-color);
+        &_section {
+            width: 100%;
+            height: auto;
+            flex-direction: column;
+            font-size: 16px;
+            &__title {
+                font-size: 40px;
+                font-weight: 900;
+                letter-spacing: 2px;
+                margin-bottom: 60px;
+            }
+            &__headers {
+                font-size: 20px;
+                font-weight: 600;
+                margin-bottom: 5px;
+                &:not(:first-of-type) {
+                    margin-top: 30px;
+                }
+            }
+        }
+        #setting_section_1 {
+            display: flex; // flex none
+        }
+        #setting_section_2 {
+            display: none; // flex none
+        }
+        #setting_section_3 {
+            display: none; // flex none
+        }
+        #setting_section_4 {
+            display: none; // flex none
+        }
+        #setting_section_5 {
+            display: none; // flex none
+        }
+        #setting_section_6 {
+            display: none; // flex none
+        }
     }
 }
 // ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
