--- a/04 ■► React/final-app/src/pages/Settings/index.module.css
+++ b/04 ■► React/final-app/src/pages/Settings/index.module.css
@@ -59,6 +59,7 @@
   font-weight: 900;
   letter-spacing: 2px;
   margin-bottom: 60px;
+  text-transform: uppercase;
 }
 .settings__container_section__headers {
   font-size: 20px;
