--- a/04 ■► React/final-app/src/pages/Settings/index.module.scss
+++ b/04 ■► React/final-app/src/pages/Settings/index.module.scss
@@ -74,6 +74,7 @@
                 font-weight: 900;
                 letter-spacing: 2px;
                 margin-bottom: 60px;
+                text-transform: uppercase;
             }
             &__headers {
                 font-size: 20px;
