--- a/04 ■► React/final-app/src/pages/Products/index.module.css
+++ b/04 ■► React/final-app/src/pages/Products/index.module.css
@@ -13,7 +13,7 @@
 }
 .products__topside {
   width: 100%;
-  height: 30px;
+  height: 50px;
   background-color: var(--default-bg-color);
   display: flex;
   justify-content: center;
@@ -53,28 +53,37 @@
 .products__topside_sort option {
   background-color: var(--default-bg-color);
 }
-.products .tempdiv {
+.products .filteraside {
+  margin: 80px 0px 0px 0px;
   width: 300px;
-  height: 400px;
+  height: 600px;
   border: 1px solid green;
   display: flex;
   justify-content: center;
   align-items: center;
   transition: var(--slow-fx);
+  visibility: visible;
+  opacity: 1;
+  transform: translateX(0%);
+  flex-direction: column;
 }
 .products .container {
+  margin: 80px 0px 0px 0px;
   width: 1100px;
+  height: auto;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 20px 12px;
+  flex-wrap: wrap;
   border: 1px solid yellow;
   padding: 20px;
   transition: var(--slow-fx);
 }
 .products .container .products__cards {
   border: 1px solid var(--borders-color);
-  width: 300px;
-  height: 450px;
+  width: 200px;
+  height: 280px;
   background-color: rgb(255, 255, 255);
   border-radius: 6px;
   overflow: hidden;
@@ -87,14 +96,19 @@
 }
 .products .container .products__cards_image {
   width: 100%;
-  height: 300px;
+  height: 180px;
   border: none;
   border-bottom: 1px solid var(--borders-color);
   overflow: hidden;
   position: relative;
+  align-self: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .products .container .products__cards_image__content {
-  width: 100%;
+  z-index: 0;
+  width: 60%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
@@ -104,8 +118,8 @@
   top: 10px;
   right: 10px;
   opacity: 0.5;
-  width: 50px;
-  height: 50px;
+  width: 25px;
+  height: 25px;
   background-color: var(--buttons-color);
   color: var(--link-color);
   border: 1px solid var(--borders-color);
@@ -113,7 +127,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 20px;
+  font-size: 14px;
   transition: var(--quick-fx);
 }
 .products .container .products__cards_image__favbtn:hover {
@@ -130,23 +144,26 @@
 .products .container .products__cards_information {
   width: 100%;
   height: auto;
-  padding: 15px;
+  padding: 10px;
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 5px;
+  color: var(--header-top-color);
 }
 .products .container .products__cards_information__titleandcateg {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   flex-direction: column;
 }
 .products .container .products__cards_information__titleandcateg_title {
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 600;
+  height: 14px;
+  overflow: auto;
 }
 .products .container .products__cards_information__titleandcateg_categ {
-  font-size: 14px;
+  font-size: 12px;
   opacity: 0.5;
   font-style: italic;
   align-self: flex-start;
@@ -155,17 +172,19 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 80px;
+  gap: 40px;
 }
 .products .container .products__cards_information__rating_stars {
   color: var(--link-hover-color);
+  scale: 0.8;
 }
 .products .container .products__cards_information__rating_point {
   opacity: 0.9;
 }
 .products .container .products__cards_information__description {
-  font-size: 14px;
+  font-size: 12px;
 }
 .products .container .products__cards_information__price {
+  font-size: 14px;
   font-weight: 900;
 }/*# sourceMappingURL=index.module.css.map */
