--- a/04 ■► React/final-app/src/pages/Products/index.module.scss
+++ b/04 ■► React/final-app/src/pages/Products/index.module.scss
@@ -23,7 +23,7 @@
     // border: 1px solid red;
     background-color: var(--default-bg-color);
     color: var(--text-color);
-    display: flex;
+    display: flex; // flex table
     justify-content: center;
     align-items: flex-start;
     // flex-direction: column;
@@ -33,7 +33,7 @@
 
     &__topside {
         width: 100%;
-        height: 30px;
+        height: 50px;
         background-color: var(--default-bg-color);
         display: flex;
         justify-content: center;
@@ -75,28 +75,37 @@
     }
 
     // temporary component which FilterAside will replace it
-    .tempdiv {
-        width: 300px;
-        height: 400px;
+    .filteraside {
+        margin: 80px 0px 0px 0px; // top right bottom left
+        width: 300px; // 0px 300px
+        height: 600px;
         border: 1px solid green;
-        display: flex;
+        display: flex; // flex table-cell
         justify-content: center;
         align-items: center;
         transition: var(--slow-fx);
+        visibility: visible; // visible hidden
+        opacity: 1.0; // 1.0 0.0
+        transform: translateX(-0%); // -0% -100%
+        flex-direction: column;
     }
 
     .container {
-        width: 1100px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        margin: 80px 0px 0px 0px; // top right bottom left
+        width: 1100px; // 1400px 1100px
+        height: auto;
+        display: flex; // flex table-cell
+        justify-content: flex-start;
+        align-items: flex-start;
+        gap: 20px 12px; // 20px 12px | 20px 28px
+        flex-wrap: wrap;
         border: 1px solid yellow;
         padding: 20px;
         transition: var(--slow-fx);
         .products__cards {
             border: 1px solid var(--borders-color);
-            width: 300px;
-            height: 450px;
+            width: 200px;
+            height: 280px;
             background-color: rgb(255,255,255);
             border-radius: 6px;
             overflow: hidden;
@@ -108,13 +117,18 @@
             }
             &_image {
                 width: 100%;
-                height: 300px;
+                height: 180px;
                 border: none;
                 border-bottom: 1px solid var(--borders-color);
                 overflow: hidden;
                 position: relative;
+                align-self: center;
+                display: flex;
+                align-items: center;
+                justify-content: center;
                 &__content {
-                    width: 100%;
+                    z-index: 0;
+                    width: 60%;
                     height: 100%;
                     object-fit: cover;
                 }
@@ -123,8 +137,8 @@
                     top: 10px;
                     right: 10px;
                     opacity: 0.5;
-                    width: 50px;
-                    height: 50px;
+                    width: 25px;
+                    height: 25px;
                     background-color: var(--buttons-color);
                     color: var(--link-color);
                     border: 1px solid var(--borders-color);
@@ -132,7 +146,7 @@
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    font-size: 20px;
+                    font-size: 14px;
                     transition: var(--quick-fx);
                     &:hover {
                         background-color: var(--buttons-hover-color);
@@ -150,21 +164,24 @@
             &_information {
                 width: 100%;
                 height: auto;
-                padding: 15px;
+                padding: 10px;
                 display: flex;
                 flex-direction: column;
-                gap: 15px;
+                gap: 5px;
+                color: var(--header-top-color);
                 &__titleandcateg {
                     display: flex;
                     justify-content: center;
-                    align-items: center;
+                    align-items: flex-start;
                     flex-direction: column;
                     &_title {
-                        font-size: 16px;
+                        font-size: 14px;
                         font-weight: 600;
+                        height: 14px;
+                        overflow: auto;
                     }
                     &_categ {
-                        font-size: 14px;
+                        font-size: 12px;
                         opacity: 0.5;
                         font-style: italic;
                         align-self: flex-start;
@@ -174,18 +191,20 @@
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    gap: 80px;
+                    gap: 40px;
                     &_stars {
                         color: var(--link-hover-color);
+                        scale: 0.8;
                     }
                     &_point {
                         opacity: 0.9;
                     }
                 }
                 &__description {
-                    font-size: 14px;
+                    font-size: 12px;
                 }
                 &__price {
+                    font-size: 14px;
                     font-weight: 900;
                 }
             }
