--- a/04 ■► React/final-app/src/pages/Purchase/index.module.css
+++ b/04 ■► React/final-app/src/pages/Purchase/index.module.css
@@ -1,1 +1,85 @@
-/*# sourceMappingURL=index.module.css.map */
+.purchase {
+  width: 100%;
+  background-color: var(--default-bg-color);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+.purchase__status {
+  width: 1400px;
+  height: 60px;
+  font-size: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 40px;
+  color: rgb(4, 128, 4);
+  filter: drop-shadow(0 0 1px var(--filter-shadow-color));
+  font-weight: 900;
+}
+.purchase__infolist {
+  width: 800px;
+  height: auto;
+  padding: 20px 0px 20px 100px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin: 10px 0px 10px 0px;
+  border: none;
+  border-top: 1px solid var(--borders-color);
+  border-bottom: 1px solid var(--borders-color);
+}
+.purchase__infolist_items {
+  font-size: 18px;
+  font-weight: 600;
+  color: var(--text-color);
+  width: -moz-fit-content;
+  width: fit-content;
+}
+.purchase__infolist_items:not(:last-of-type) {
+  border-bottom: 1px solid var(--default-color);
+  padding-bottom: 5px;
+}
+.purchase__buttons {
+  width: 700px;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 40px;
+}
+.purchase__buttons_header {
+  font-size: 18px;
+  margin-bottom: 5px;
+  color: var(--text-color);
+}
+.purchase__buttons_list {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  gap: 60px;
+  align-items: center;
+  justify-content: center;
+}
+.purchase__buttons_list__items {
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  border-radius: 4px;
+  padding: 4px;
+  font-size: 16px;
+  border: 1px solid var(--borders-color);
+  background-color: var(--buttons-color);
+  color: var(--text-color);
+  transition: var(--quick-fx);
+}
+.purchase__buttons_list__items:hover {
+  background-color: var(--buttons-hover-color);
+  scale: 1.05;
+  filter: drop-shadow(0 0 5px var(--filter-shadow-color));
+}
+.purchase__buttons_list__items:active {
+  transition: var(--instant-fx);
+  background-color: var(--buttons-active-color);
+}/*# sourceMappingURL=index.module.css.map */
