--- a/04 ■► React/final-app/src/pages/Products/index.module.scss
+++ b/04 ■► React/final-app/src/pages/Products/index.module.scss
@@ -33,15 +33,16 @@
 
     &__topside {
         width: 100%;
-        height: 50px;
+        height: auto;
         background-color: var(--default-bg-color);
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: 700px;
+        gap: 100px;
         border: none;
         border-bottom: 1px solid var(--borders-color);
         margin-bottom: 10px;
+        padding: 10px;
         &_filterbtn {
             width: 60px;
             height: auto;
@@ -63,8 +64,44 @@
             }
         }
         &_filtertags {
+            border: none;
+            border-left: 2px solid var(--text-color);
+            border-right: 2px solid var(--text-color);
+            width: 700px;
+            padding: 5px 20px 5px 20px;
+            gap: 5px;
+            display: flex;
+            flex-wrap: wrap;
             &__selected {
-                .xmark {}
+                width: fit-content;
+                background-color: var(--buttons-color);
+                border: 1px solid var(--borders-color);
+                color: var(--text-color);
+                display: flex;
+                padding: 2px;
+                border-radius: 3px;
+                .xmark {
+                    color: var(--link-color);
+                    margin-left: 4px;
+                    background-color: transparent;
+                    outline: none;
+                    border: none;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    width: fit-content;
+                    height: fit-content;
+                    padding: 1px;
+                    transition: var(--quick-fx);
+                    &:hover {
+                        color: var(--buttons-hover-color);
+                        filter: brightness(0.5);
+                    }
+                    &:active {
+                        transition: var(--instant-fx);
+                        color: var(--buttons-active-color);
+                    }
+                }
             }
         }
         &_sort {
@@ -84,30 +121,113 @@
         margin: 80px 0px 0px 0px; // top right bottom left
         width: 300px; // 0px 300px
         height: 600px;
-        border: 1px solid green;
+        border: none;
+        border-right: 2px solid var(--borders-color);
         display: flex; // flex table-cell
-        justify-content: center;
-        align-items: center;
+        justify-content: flex-start;
+        align-items: flex-start;
         transition: var(--slow-fx);
         visibility: visible; // visible hidden
         opacity: 1.0; // 1.0 0.0
         transform: translateX(-0%); // -0% -100%
         flex-direction: column;
-        &__header {}
-        &__categories_label {}
+        padding: 40px 0px 0px 0px; // top right bottom left
+        &__header {
+            font-size: 40px;
+            font-weight: 900;
+            text-transform: uppercase;
+            filter: drop-shadow(0 0 3px var(--filter-shadow-color));
+            margin-bottom: 20px;
+            align-self: center;
+        }
+        &__categories_label {
+            padding-left: 20px;
+            font-size: 20px;
+            font-weight: 600;
+            margin-bottom: 10px;
+            margin-top: 30px;
+        }
         &__categories {
-            &_buttons {}
+            padding-left: 20px;
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+            &_buttons {
+                font-weight: 600;
+                border: 1px solid var(--borders-color);
+                border-radius: 2px;
+                background-color: var(--buttons-color);
+                color: var(--text-color);
+                transition: var(--quick-fx);
+                width: fit-content;
+                height: fit-content;
+                padding: 3px;
+                &:hover {
+                    background-color: var(--buttons-hover-color);
+                }
+                &:active {
+                    transition: var(--instant-fx);
+                    background-color: var(--buttons-active-color);
+                }
+            }
         }
-        &__price_label {}
+        &__price_label {
+            padding-left: 20px;
+            font-size: 20px;
+            font-weight: 600;
+            margin-bottom: 10px;
+            margin-top: 30px;
+        }
         &__price_container {
-            &__input {}
+            padding-left: 20px;
+            display: flex;
+            gap: 10px;
+            &__input {
+                width: 120px;
+                height: 24px;
+                padding-left: 6px;
+                color: var(--text-color);
+                font-weight: 600;
+                border: 1px solid var(--borders-color);
+                border-radius: 4px;
+                outline: none;
+                background-color: var(--searchbar-bg);
+            }
         }
-        &__rating_label {}
+        &__rating_label {
+            padding-left: 20px;
+            font-size: 20px;
+            font-weight: 600;
+            margin-bottom: 10px;
+            margin-top: 30px;
+        }
         &__rating_container {
+            padding-left: 20px;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 5px;
             &__buttons {
+                display: flex;
                 &_item {
-                    .fa-star {}
-                    &__text {}
+                    font-weight: 600;
+                    border: 1px solid var(--borders-color);
+                    border-radius: 2px;
+                    background-color: var(--buttons-color);
+                    color: var(--text-color);
+                    transition: var(--quick-fx);
+                    width: fit-content;
+                    height: fit-content;
+                    padding: 3px;
+                    &:hover {
+                        background-color: var(--buttons-hover-color);
+                    }
+                    &:active {
+                        transition: var(--instant-fx);
+                        background-color: var(--buttons-active-color);
+                    }
+                    &__text {
+                        margin-left: 5px;
+                    }
                 }
             }
         }
@@ -122,7 +242,7 @@
         align-items: flex-start;
         gap: 20px 12px; // 20px 12px | 20px 28px
         flex-wrap: wrap;
-        border: 1px solid yellow;
+        border: none;
         padding: 20px;
         transition: var(--slow-fx);
         .products__cards {
@@ -232,7 +352,30 @@
                 }
             }
         }
-        .loadmore {}
+        .loadmore {
+            font-size: 18px;
+            font-weight: 600;
+            background-color: transparent;
+            color: var(--link-color);
+            letter-spacing: 3px;
+            border: none;
+            cursor: pointer;
+            outline: none;
+            transition: var(--quick-fx);
+            position: relative;
+            width: fit-content;
+            bottom: 0%;
+            left: 50%;
+            transform: translateX(-50%);
+            &:hover {
+                color: var(--link-hover-color);
+                filter: drop-shadow(0 0 1px var(--filter-shadow-color));
+            }
+            &:active {
+                transition: var(--instant-fx);
+                color: var(--link-active-color);
+            }
+        }
     }
 }
 // ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
