--- a/04 ■► React/final-app/src/pages/Products/index.module.css
+++ b/04 ■► React/final-app/src/pages/Products/index.module.css
@@ -100,7 +100,7 @@
 }
 .products .filteraside {
   margin: 80px 0px 0px 0px;
-  width: 300px;
+  width: 0px;
   height: 600px;
   border: none;
   border-right: 2px solid var(--borders-color);
@@ -108,9 +108,9 @@
   justify-content: flex-start;
   align-items: flex-start;
   transition: var(--slow-fx);
-  visibility: visible;
-  opacity: 1;
-  transform: translateX(0%);
+  visibility: hidden;
+  opacity: 0;
+  transform: translateX(-100%);
   flex-direction: column;
   padding: 40px 0px 0px 0px;
 }
@@ -219,12 +219,12 @@
 }
 .products .container {
   margin: 80px 0px 0px 0px;
-  width: 1100px;
+  width: 1400px;
   height: auto;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
-  gap: 20px 12px;
+  gap: 20px 28px;
   flex-wrap: wrap;
   border: none;
   padding: 20px;
@@ -349,8 +349,7 @@
   outline: none;
   transition: var(--quick-fx);
   position: relative;
-  width: -moz-fit-content;
-  width: fit-content;
+  width: 100%;
   bottom: 0%;
   left: 50%;
   transform: translateX(-50%);
