--- a/04 ■► React/final-app/src/pages/Products/index.module.css
+++ b/04 ■► React/final-app/src/pages/Products/index.module.css
@@ -165,6 +165,7 @@
 .products .filteraside__price_container {
   padding-left: 20px;
   display: flex;
+  flex-wrap: wrap;
   gap: 10px;
 }
 .products .filteraside__price_container__input {
@@ -177,6 +178,23 @@
   border-radius: 4px;
   outline: none;
   background-color: var(--searchbar-bg);
+}
+.products .filteraside__price_container__submit {
+  width: 250px;
+  height: 24px;
+  border: 1px solid var(--borders-color);
+  color: var(--text-color);
+  font-weight: 600;
+  border-radius: 4px;
+  background-color: var(--buttons-color);
+  transition: var(--quick-fx);
+}
+.products .filteraside__price_container__submit:hover {
+  background-color: var(--buttons-hover-color);
+}
+.products .filteraside__price_container__submit:active {
+  transition: var(--instant-fx);
+  background-color: var(--buttons-active-color);
 }
 .products .filteraside__rating_label {
   padding-left: 20px;
