--- a/04 ■► React/final-app/src/pages/Purchase/index.module.scss
+++ b/04 ■► React/final-app/src/pages/Purchase/index.module.scss
@@ -17,12 +17,14 @@
 //                              var(--borders-color)
 // ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
 .purchase {
-    width: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: var(--default-bg-color);
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    padding-top: 150px;
     &__status {
         width: 1400px;
         height: 60px;
