--- a/04 ■► React/final-app/src/components/Footer/index.module.css
+++ b/04 ■► React/final-app/src/components/Footer/index.module.css
@@ -10,7 +10,7 @@
   color: var(--text-negative-color);
   display: flex;
   justify-content: center;
-  gap: 50px;
+  gap: 10px;
   border: none;
   border-bottom: 1px solid var(--borders-color);
 }
@@ -18,6 +18,11 @@
   width: 250px;
   height: auto;
   margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+}
+.footer__top_column:first-of-type {
+  margin-right: 200px;
 }
 .footer__top_column__header {
   text-transform: uppercase;
