--- a/04 ■► React/final-app/src/components/Pop-ups/index.module.css
+++ b/04 ■► React/final-app/src/components/Pop-ups/index.module.css
@@ -301,4 +301,19 @@
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
   background-color: rgba(255, 255, 255, 0.1);
+}
+
+.hidden {
+  display: none;
+}
+
+.overlay {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: red;
+  width: 300px;
+  height: 300px;
+  z-index: 100;
 }/*# sourceMappingURL=index.module.css.map */
