ShopNet day 45/60 | June 2, 2023 at 13:50

--- a/04 ■► React/final-app/src/components/Header/index.module.scss
+++ b/04 ■► React/final-app/src/components/Header/index.module.scss
@@ -314,6 +314,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            // flex-wrap: wrap;
             // border: 1px solid red;
             cursor: pointer;
             position: relative;
