--- a/04 ■► React/final-app/src/components/Header/index.module.css
+++ b/04 ■► React/final-app/src/components/Header/index.module.css
@@ -229,6 +229,9 @@
   background-color: var(--buttons-color);
   border: 1px solid var(--link-color);
   transition: var(--quick-fx);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .header__main_search__button #fa_glass {
   color: var(--link-color);
